# OverlayRTT

./: Above.docx  KODA.md  class_architecture.md  class_architecture_v2.md  require.md  screencapture.docx  screencapture.md  translator.docx  translator.md  Диплом.drawio  ТЗ (1).md  ТЗ.docx
app/real_time_translator/: CMakeLists.txt  README.md  main.cpp  requirements.txt
app/real_time_translator/config/: default_config.json
app/real_time_translator/core/: CoreEngine.cpp  CoreEngine.h  Interfaces.cpp  Interfaces.h
app/real_time_translator/docs/: translators.md
app/real_time_translator/modules/capture/: FFmpegCapture.h  GrimCapture.h  NullCapture.h  ScreenCaptureLite.h
app/real_time_translator/modules/ocr/: StubOCR.h  TesseractOCR.h
app/real_time_translator/modules/overlay/: StubOverlay.h
app/real_time_translator/modules/translator/: BergamotTranslator.h  CTranslate2Translator.h  MarianTranslator.h  OllamaTranslator.h  StubTranslator.h
app/real_time_translator/scripts/: download_bergamot_model.sh  prepare_firefox_model.sh
app/real_time_translator/utils/: ConfigManager.cpp  ConfigManager.h  LatestQueue.cpp  LatestQueue.h  Logger.cpp  Logger.h  ThreadPool.cpp  ThreadPool.h
